<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update:%s</string>
    <string name="search_title">Search for city</string>
    <string name="downloading_data">Fetching weather for specified city</string>
    <string name="getting_location">Getting your location</string>
    <string name="error_dateFormat">DATE FORMAT ERROR</string>
    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustomSummary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempUnitsAsInteger">Show Temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme" tools:keep="@string/setting_theme">Theme</string>
    <string name="setting_auto_detect_location" tools:keep="@string/setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days With Color</string>
    <string name="setting_refreshInterval">Background Refresh Interval</string>
    <string name="setting_unit_mps">Meters per second(m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour(kph)</string>
    <string name="setting_unit_mph">Miles per hour(mph)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="setting_none">None</string>
    <string name="setting_unit_Celsuis">Celsuis</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>
    <string name="setting_unit_mm">Millimeters(mm)</string>
    <string name="setting_unit_in">Inches(in)</string>
    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="wind_direction_format_none">None</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>
    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmHg">mm Hg</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_err_parsing_json">Error fetching weather for specified city</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available</string>
    <string name="msg_city_not_found">Specified city is not found.</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests.Please try again.</string>
    <string name="dash_clock_status">%1$s°%2$s</string>
    <string name="dash_clock_expanded_title">%1$s°%2$s-3%$s</string>
    <string name="dash_clock_expanded_body">%1$s,%2$s\nWind:%3$s%4$s\nPressure:%5$s%6$s\nHumidity:%7$s%%\n</string>
    <string name="setting_title_units">Units</string>
    <string name="setting_title_display">Display</string>
    <string name="setting_title_data">Data</string>
    <string name="setting_displayDecimalZeroes">Display decimal zeroes</string>
    <string name="setting_title_location" tools:keep="@string/setting_title_location">Location</string>
    <string name="setting_update_location_automatically" tools:keep="@string/setting_update_location_automatically">Update the location in background</string>
    <string name="location_settings" tools:keep="@string/location_settings">Location settings</string>
    <string name="location_settings_message" tools:keep="@string/location_settings_message">Location is not enabled.Do you wish to the settings?</string>
    <string name="location_settings_button" tools:keep="@string/location_settings_button">Settings</string>
    <string name="action_weather_map">Weather Map</string>
    <string name="rain">Rain</string>
    <string name="temperature">Temperature</string>
    <string name="action_graphs" tools:keep="@string/action_graphs">Graphs</string>
    <string name="app_id" tools:keep="@string/app_id">appf42e4a914b9b476d82</string>
    <string name="zone_ids" tools:keep="@string/zone_ids">vz03c440df625b4ba9a7</string>
</resources>
