<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_title_units">
        <ListPreference
            android:defaultValue="C"
            android:entries="@array/temperatureUnits"
            android:entryValues="@array/temperatureUnitValues"
            android:key="unit"
            android:title="@string/setting_tempUnits"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="temperatureInteger"
            android:title="@string/setting_showTempUnitsAsInteger"/>
        <ListPreference
            android:defaultValue="mm"
            android:entries="@array/lengthUnits"
            android:entryValues="@array/lengthUnitValues"
            android:key="lengthUnit"
            android:title="@string/setting_lengthUnits"/>
        <ListPreference
            android:defaultValue="m/s"
            android:entries="@array/speedUnits"
            android:entryValues="@array/speedUnitValues"
            android:key="speedUnit"
            android:title="@string/setting_speedUnits"/>
        <ListPreference
            android:defaultValue="hPa"
            android:entries="@array/pressureUnits"
            android:entryValues="@array/pressureUnitValues"
            android:key="pressureUnit"
            android:title="@string/setting_pressureUnits"/>
        <ListPreference
            android:entryValues="@array/dateFormatValues"
            android:key="dateFormat"
            android:title="@string/setting_dateFormat"/>
        <EditTextPreference
            android:key="dateFormatCustom"
            android:title="@string/setting_dateFormatCustom"
            android:summary="@string/setting_dateFormatCustomSummary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_title_display">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="darkTheme"
            android:title="@string/dark_theme"/>
        <ListPreference
            android:key="windDirectionFormat"
            android:defaultValue="arrow"
            android:entries="@array/windDirectionFormats"
            android:entryValues="@array/windDirectionFormatValues"
            android:title="@string/setting_wind_direction_format"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="displayDecimalZeroes"
            android:title="@string/setting_displayDecimalZeroes"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="differentiateDaysByTint"
            android:title="@string/setting_differentiateDaysByTint"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_title_data">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/refreshInterval"
            android:entryValues="@array/refreshIntervalValues"
            android:key="refreshInterval"
            android:title="@string/setting_refreshInterval"/>
    </PreferenceCategory>
</PreferenceScreen>